--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,16 @@
-﻿# CMakeList.txt : CMake project for CppDatabase, include source and define
-# project specific logic here.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required(VERSION 3.8)
+project(CppDatabase)
 
-# Enable Hot Reload for MSVC compilers if supported.
-if (POLICY CMP0141)
-  cmake_policy(SET CMP0141 NEW)
-  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
-endif()
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-project ("CppDatabase")
+# Dodaj pliki źródłowe
+add_executable(${PROJECT_NAME} 
+    CppDatabase.cpp
+    class_definitions/Table.cpp
+    class_definitions/DatabasePersistence.cpp
+        class_definitions/SQLParser.cpp
+)
 
-# Add source to this project's executable.
-add_executable (CppDatabase "CppDatabase.cpp")
-
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET CppDatabase PROPERTY CXX_STANDARD 20)
-endif()
-
-# TODO: Add tests and install targets if needed.
+# Dodaj ścieżki include
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
